# mnist

./: CMakeLists.txt
src/: main.cpp
src/lib/: NeuralNetwork.cpp  NeuralNetwork.h  mnist.cpp  mnist.h
